--- a/.github/workflows/run_script.yml
+++ b/.github/workflows/run_script.yml
@@ -25,5 +25,6 @@ jobs:
         env:
           SLACK_TOKEN: ${{ secrets.SLACK_TOKEN }}
           CHANNEL_ID: ${{ secrets.CHANNEL_ID }}
+          USER_ID: ${{ secrets.USER_ID }}
         run: python src/main.py
 
