--- a/.github/workflows/run_script.yml
+++ b/.github/workflows/run_script.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Run Slack Message Script
         env:
-          SLACK_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
           CHANNEL_ID: ${{ secrets.CHANNEL_ID }}
           USER_ID: ${{ secrets.USER_ID }}
         run: python src/main.py
